--- a/Saves/Nifflas - The Machine 1.ini
+++ b/Saves/Nifflas - The Machine 1.ini
@@ -1,8 +1,9 @@
 [Positions]
-X Map=991
-Y Map=1016
-X Pos=22
-Y Pos=6
+X Map=1001
+Y Map=1010
+X Pos=12
+Y Pos=8
+Actual=0
 [Powers]
 Power0=1
 Power1=1
@@ -16,6 +17,7 @@ Power8=0
 Power9=0
 Power10=0
 Power11=0
+Power12=0
 [World]
 World Folder=Nifflas - The Machine
 [Flags]
@@ -29,3 +31,28 @@ Flag6=0
 Flag7=0
 Flag8=0
 Flag9=0
+[Extras]
+Character=juni
+Creatures 1=0
+Creatures 2=0
+Creature Count=0
+Coins 1=0
+Coins 2=0
+Coins 3=0
+Coins 4=0
+Coin Count=0
+Coins Spent=0
+Artifacts 1=0
+Artifacts 2=0
+Artifact Count 1=0
+Artifact Count 2=0
+Artifact Count 3=0
+Artifact Count 4=0
+Artifact Count 5=0
+Artifact Count 6=0
+Artifact Count 7=0
+Tint=0
+TintTrans=0
+TintInk=
+Attach=false
+Show Edge=0
