--- a/Worlds/+-[ Paul Henrik ]-+ - Little-red-riding-hood/DefaultSavegame.ini
+++ b/Worlds/+-[ Paul Henrik ]-+ - Little-red-riding-hood/DefaultSavegame.ini
@@ -2,7 +2,7 @@
 X Map=1000
 Y Map=1000
 X Pos=12
-Y Pos=3
+Y Pos=8
 [Powers]
 Power0=1
 Power1=0
@@ -16,3 +16,15 @@ Power8=0
 Power9=0
 Power10=0
 Power11=0
+Power12=0
+[Flags]
+Flag0=0
+Flag1=0
+Flag2=0
+Flag3=0
+Flag4=0
+Flag5=0
+Flag6=0
+Flag7=0
+Flag8=0
+Flag9=0
