--- a/Worlds/+-[ Paul Henrik ]-+ - Little-red-riding-hood/World.ini
+++ b/Worlds/+-[ Paul Henrik ]-+ - Little-red-riding-hood/World.ini
@@ -1,6 +1,6 @@
 [World]
-Name=gd4
-Author=yep
+Name=Little-red-riding-hood
+Author=+-[ Paul Henrik ]-+
 Description=
 Category A=
 Category B=
@@ -77,3 +77,16 @@ Ending=15
 ; Medium          A medium sized level.
 ;
 ; Large           A large level.
+[x995y1000]
+ShiftXMap(B)=-5
+ShiftXMap(A)=990
+ShiftYMap(A)=1000
+ShiftAbsoluteTarget(A)=True
+ShiftXPos(A)=21
+ShiftYPos(A)=7
+[x990y1000]
+ShiftXPos(A)=11
+ShiftYPos(A)=6
+ShiftXMap(A)=995
+ShiftYMap(A)=1000
+ShiftAbsoluteTarget(A)=True
