Added my own save

--- a/Worlds/Henrik - Scenes/DefaultSavegame.ini
+++ b/Worlds/Henrik - Scenes/DefaultSavegame.ini
@@ -1,8 +1,10 @@
 [Positions]
-X Map=1009
-Y Map=998
+X Map=1000
+Y Map=1000
+X Pos=12
+Y Pos=8
 [Powers]
-Power0=0
+Power0=1
 Power1=0
 Power2=0
 Power3=0
