Added start of Flower forest

--- a/Settings.ini
+++ b/Settings.ini
@@ -7,3 +7,5 @@ GetUpdate=http://www.egomassive.com/ks
 GetEx=https://sites.google.com/site/sergroj/ks
 [Activity]
 Played Dir=Nifflas - The Machine
+[Menu Options]
+Restarted=1
