Renamed game name when seen in play selection

--- a/Worlds/Henrik - Scenes/World.ini
+++ b/Worlds/Henrik - Scenes/World.ini
@@ -1,6 +1,6 @@
 [World]
-Name=Little-red-riding-hood
-Author=+-[ Paul Henrik ]-+
+Name=Scenes
+Author=Henrik
 Description=
 Category A=
 Category B=
