--- a/Worlds/[ Paul Henrik ] - Clean Build/World.ini
+++ b/Worlds/[ Paul Henrik ] - Clean Build/World.ini
@@ -1,6 +1,6 @@
 [World]
-Name=Little-red-riding-hood
-Author=+-[ Paul Henrik ]-+
+Name=Clean Build
+Author=[ Paul Henrik ]
 Description=
 Category A=
 Category B=
