--- a/Worlds/[ Paul Henrik ] - Clean Build/World.ini
+++ b/Worlds/[ Paul Henrik ] - Clean Build/World.ini
@@ -90,3 +90,24 @@ ShiftYPos(A)=6
 ShiftXMap(A)=995
 ShiftYMap(A)=1000
 ShiftAbsoluteTarget(A)=True
+[x1004y1002]
+ShiftXPos(A)=4
+ShiftYPos(A)=7
+ShiftYMap(A)=1003
+ShiftXMap(A)=1004
+ShiftAbsoluteTarget(A)=True
+[x1004y1003]
+ShiftXPos(A)=8
+ShiftYPos(A)=5
+ShiftXMap(A)=1004
+ShiftYMap(A)=1002
+ShiftAbsoluteTarget(A)=True
+[x1010y1002]
+ShiftXPos(A)=20
+ShiftYPos(A)=7
+ShiftYMap(A)=1006
+ShiftTouch(A)=True
+ShiftEffect(A)=False
+ShiftVisible(A)=False
+ShiftXMap(A)=1010
+ShiftAbsoluteTarget(A)=True
