Flower field parkour done

--- a/Worlds/Henrik - Scenes/World.ini
+++ b/Worlds/Henrik - Scenes/World.ini
@@ -90,3 +90,23 @@ ShiftYPos(A)=6
 ShiftXMap(A)=995
 ShiftYMap(A)=1000
 ShiftAbsoluteTarget(A)=True
+[x1004y1002]
+ShiftXPos(A)=4
+ShiftYPos(A)=7
+ShiftXMap(A)=1004
+ShiftYMap(A)=1003
+ShiftAbsoluteTarget(A)=True
+[x1004y1003]
+ShiftXPos(A)=8
+ShiftYPos(A)=5
+ShiftXMap(A)=1004
+ShiftYMap(A)=1002
+ShiftAbsoluteTarget(A)=True
+[x1009y1002]
+ShiftXPos(A)=2
+ShiftYPos(A)=8
+ShiftXMap(A)=1009
+ShiftYMap(A)=1005
+ShiftTouch(A)=True
+ShiftAbsoluteTarget(A)=True
+ShiftVisible(A)=False
