--- a/Worlds/Paul - Scenes/World.ini
+++ b/Worlds/Paul - Scenes/World.ini
@@ -1,6 +1,6 @@
 [World]
-Name=Little-red-riding-hood
-Author=+-[ Paul Henrik ]-+
+Name=Paul - Scenes
+Author=[ Paul Henrik ]
 Description=
 Category A=
 Category B=
@@ -90,3 +90,32 @@ ShiftYPos(A)=6
 ShiftXMap(A)=995
 ShiftYMap(A)=1000
 ShiftAbsoluteTarget(A)=True
+[x1004y1002]
+ShiftXPos(A)=4
+ShiftYPos(A)=7
+ShiftYMap(A)=1003
+ShiftXMap(A)=1004
+ShiftAbsoluteTarget(A)=True
+[x1004y1003]
+ShiftXPos(A)=8
+ShiftYPos(A)=5
+ShiftXMap(A)=1004
+ShiftYMap(A)=1002
+ShiftAbsoluteTarget(A)=True
+[x1010y1002]
+ShiftXPos(A)=2
+ShiftYPos(A)=8
+ShiftYMap(A)=1006
+ShiftTouch(A)=True
+ShiftEffect(A)=False
+ShiftVisible(A)=False
+ShiftXMap(A)=1010
+ShiftAbsoluteTarget(A)=True
+[x998y1000]
+ShiftXMap(A)=990
+ShiftYMap(A)=1000
+ShiftAbsoluteTarget(A)=True
+ShiftXPos(A)=21
+ShiftYPos(A)=7
+ShiftType(A)=1
+ShiftSound(A)=Door
