--- a/Worlds/Paul - Scenes/World.ini
+++ b/Worlds/Paul - Scenes/World.ini
@@ -1,6 +1,6 @@
 [World]
-Name=Paul - Scenes
-Author=[ Paul Henrik ]
+Name=Clean Build
+Author=Paul - Scenes
 Description=
 Category A=
 Category B=
@@ -85,11 +85,12 @@ ShiftAbsoluteTarget(A)=True
 ShiftXPos(A)=21
 ShiftYPos(A)=7
 [x990y1000]
-ShiftXPos(A)=11
-ShiftYPos(A)=6
-ShiftXMap(A)=995
+ShiftXPos(A)=12
+ShiftYPos(A)=7
+ShiftXMap(A)=998
 ShiftYMap(A)=1000
 ShiftAbsoluteTarget(A)=True
+ShiftSound(A)=Door
 [x1004y1002]
 ShiftXPos(A)=4
 ShiftYPos(A)=7
@@ -100,7 +101,7 @@ ShiftAbsoluteTarget(A)=True
 ShiftXPos(A)=8
 ShiftYPos(A)=5
 ShiftXMap(A)=1004
-ShiftYMap(A)=1002
+ShiftYMap(A)=1010
 ShiftAbsoluteTarget(A)=True
 [x1010y1002]
 ShiftXPos(A)=2
@@ -112,10 +113,9 @@ ShiftVisible(A)=False
 ShiftXMap(A)=1010
 ShiftAbsoluteTarget(A)=True
 [x998y1000]
-ShiftXMap(A)=990
-ShiftYMap(A)=1000
-ShiftAbsoluteTarget(A)=True
 ShiftXPos(A)=21
 ShiftYPos(A)=7
-ShiftType(A)=1
+ShiftXMap(A)=990
 ShiftSound(A)=Door
+ShiftYMap(A)=1000
+ShiftAbsoluteTarget(A)=True
