--- a/Worlds/Henrik - Scenes/World.ini
+++ b/Worlds/Henrik - Scenes/World.ini
@@ -85,16 +85,17 @@ ShiftAbsoluteTarget(A)=True
 ShiftXPos(A)=21
 ShiftYPos(A)=7
 [x990y1000]
-ShiftXPos(A)=11
-ShiftYPos(A)=6
-ShiftXMap(A)=995
+ShiftXPos(A)=12
+ShiftYPos(A)=7
+ShiftXMap(A)=998
 ShiftYMap(A)=1000
 ShiftAbsoluteTarget(A)=True
+ShiftSound(A)=Door
 [x1004y1002]
 ShiftXPos(A)=4
 ShiftYPos(A)=7
-ShiftXMap(A)=1004
 ShiftYMap(A)=1003
+ShiftXMap(A)=1004
 ShiftAbsoluteTarget(A)=True
 [x1004y1003]
 ShiftXPos(A)=8
@@ -102,11 +103,35 @@ ShiftYPos(A)=5
 ShiftXMap(A)=1004
 ShiftYMap(A)=1010
 ShiftAbsoluteTarget(A)=True
-[x1009y1002]
+[x1010y1002]
 ShiftXPos(A)=2
 ShiftYPos(A)=8
+ShiftYMap(A)=1006
+ShiftTouch(A)=True
+ShiftEffect(A)=False
+ShiftVisible(A)=False
+ShiftXMap(A)=1010
+ShiftAbsoluteTarget(A)=True
+[x998y1000]
+ShiftXPos(A)=21
+ShiftYPos(A)=7
+ShiftXMap(A)=990
+ShiftSound(A)=Door
+ShiftYMap(A)=1000
+ShiftAbsoluteTarget(A)=True
+[x1007y1001]
+ShiftEffect(A)=False
+ShiftSave(A)=True
+ShiftVisible(A)=False
+ShiftTouch(A)=True
+ShiftSound(A)=None
+[x1009y1010]
 ShiftXMap(A)=1009
 ShiftYMap(A)=1005
+ShiftSound(A)=Door
 ShiftTouch(A)=True
+ShiftEffect(A)=False
 ShiftAbsoluteTarget(A)=True
 ShiftVisible(A)=False
+ShiftXPos(A)=3
+ShiftYPos(A)=8
