clean build merge

--- a/Settings.ini
+++ b/Settings.ini
@@ -6,6 +6,5 @@ GetLevels=http://www.egomassive.com/kslevels
 GetUpdate=http://www.egomassive.com/ks
 GetEx=https://sites.google.com/site/sergroj/ks
 [Activity]
-Played Dir=Nifflas - The Machine
+Played Dir=[ Paul Henrik ] - Clean Build
 [Menu Options]
-Restarted=1
