--- a/Worlds/Henrik - Scenes/World.ini
+++ b/Worlds/Henrik - Scenes/World.ini
@@ -125,6 +125,7 @@ ShiftSave(A)=True
 ShiftVisible(A)=False
 ShiftTouch(A)=True
 ShiftSound(A)=None
+ShiftQuantize(A)=False
 [x1009y1010]
 ShiftXMap(A)=1009
 ShiftYMap(A)=1005
