--- a/Worlds/[ Paul Henrik ] - Clean Build/World.ini
+++ b/Worlds/[ Paul Henrik ] - Clean Build/World.ini
@@ -10,6 +10,7 @@ Difficulty C=
 Size=
 Format=4
 HoloFix=True
+New=0
 
 [Cutscene Music]
 Intro=15
@@ -97,12 +98,14 @@ ShiftYPos(A)=7
 ShiftYMap(A)=1003
 ShiftXMap(A)=1004
 ShiftAbsoluteTarget(A)=True
+ShiftSound(A)=Door
 [x1004y1003]
 ShiftXPos(A)=8
 ShiftYPos(A)=5
 ShiftXMap(A)=1004
 ShiftYMap(A)=1010
 ShiftAbsoluteTarget(A)=True
+ShiftSound(A)=Door
 [x1010y1002]
 ShiftXPos(A)=2
 ShiftYPos(A)=8
@@ -119,3 +122,20 @@ ShiftXMap(A)=990
 ShiftSound(A)=Door
 ShiftYMap(A)=1000
 ShiftAbsoluteTarget(A)=True
+[x1007y1001]
+ShiftSound(A)=None
+ShiftTouch(A)=True
+ShiftEffect(A)=False
+ShiftSave(A)=True
+ShiftVisible(A)=False
+ShiftQuantize(A)=False
+[x1009y1010]
+ShiftXPos(A)=2
+ShiftYPos(A)=8
+ShiftXMap(A)=1009
+ShiftYMap(A)=1005
+ShiftSound(A)=Door
+ShiftTouch(A)=True
+ShiftSave(A)=True
+ShiftAbsoluteTarget(A)=True
+ShiftVisible(A)=False
