clean build done

--- a/Worlds/Henrik - Scenes/World.ini
+++ b/Worlds/Henrik - Scenes/World.ini
@@ -136,3 +136,47 @@ ShiftAbsoluteTarget(A)=True
 ShiftVisible(A)=False
 ShiftXPos(A)=3
 ShiftYPos(A)=8
+[x1010y1005]
+ShiftXPos(A)=12
+ShiftYPos(A)=2
+ShiftXMap(A)=1010
+ShiftYMap(A)=1006
+ShiftSound(A)=None
+ShiftTouch(A)=True
+ShiftEffect(A)=False
+ShiftSave(A)=True
+ShiftAbsoluteTarget(A)=True
+ShiftVisible(A)=False
+[x1013y1005]
+ShiftXPos(A)=2
+ShiftXMap(A)=1014
+ShiftYMap(A)=1005
+ShiftSound(A)=None
+ShiftTouch(A)=True
+ShiftEffect(A)=False
+ShiftSave(A)=True
+ShiftAbsoluteTarget(A)=True
+ShiftVisible(A)=False
+ShiftYPos(A)=5
+[x1014y1005]
+ShiftXPos(A)=3
+ShiftYPos(A)=4
+ShiftXMap(A)=1015
+ShiftYMap(A)=1005
+ShiftSound(A)=None
+ShiftTouch(A)=True
+ShiftEffect(A)=False
+ShiftSave(A)=True
+ShiftAbsoluteTarget(A)=True
+ShiftVisible(A)=False
+[x1015y1005]
+ShiftXPos(A)=3
+ShiftYPos(A)=4
+ShiftXMap(A)=1016
+ShiftYMap(A)=1005
+ShiftSound(A)=None
+ShiftTouch(A)=True
+ShiftEffect(A)=False
+ShiftSave(A)=True
+ShiftAbsoluteTarget(A)=True
+ShiftVisible(A)=False
