--- a/Worlds/[ Paul Henrik ] - Clean Build/World.ini
+++ b/Worlds/[ Paul Henrik ] - Clean Build/World.ini
@@ -1,16 +1,18 @@
 [World]
 Name=Clean Build
 Author=[ Paul Henrik ]
-Description=
+Description=wow
 Category A=
 Category B=
-Difficulty A=
+Difficulty A=Lunatic
 Difficulty B=
 Difficulty C=
 Size=
 Format=4
 HoloFix=True
 New=0
+Clothes=255
+Skin=10928344
 
 [Cutscene Music]
 Intro=15
@@ -136,6 +138,39 @@ ShiftXMap(A)=1009
 ShiftYMap(A)=1005
 ShiftSound(A)=Door
 ShiftTouch(A)=True
+ShiftSave(A)=True
+ShiftAbsoluteTarget(A)=True
+ShiftVisible(A)=False
+[x1010y1005]
+ShiftXPos(A)=12
+ShiftYPos(A)=2
+ShiftXMap(A)=1010
+ShiftYMap(A)=1006
+ShiftSound(A)=None
+ShiftTouch(A)=True
+ShiftEffect(A)=False
+ShiftSave(A)=True
+ShiftAbsoluteTarget(A)=True
+ShiftVisible(A)=False
+[x1013y1005]
+ShiftXPos(A)=2
+ShiftYPos(A)=5
+ShiftXMap(A)=1014
+ShiftYMap(A)=1005
+ShiftSound(A)=None
+ShiftTouch(A)=True
+ShiftEffect(A)=False
+ShiftSave(A)=True
+ShiftAbsoluteTarget(A)=True
+ShiftVisible(A)=False
+[x1015y1005]
+ShiftXPos(A)=3
+ShiftYPos(A)=4
+ShiftXMap(A)=1016
+ShiftYMap(A)=1005
+ShiftSound(A)=None
+ShiftTouch(A)=True
+ShiftEffect(A)=False
 ShiftSave(A)=True
 ShiftAbsoluteTarget(A)=True
 ShiftVisible(A)=False
