idk what i changed but many changes oh my

--- a/Saves/Paul - Scenes 1.ini
+++ b/Saves/Paul - Scenes 1.ini
@@ -1,20 +1,20 @@
 [Positions]
-X Map=1016
-Y Map=1005
-X Pos=3
-Y Pos=4
+X Map=1004
+Y Map=1000
+X Pos=21
+Y Pos=1
 Actual=0
 [Powers]
 Power0=1
-Power1=1
-Power2=1
+Power1=0
+Power2=0
 Power3=1
 Power4=0
 Power5=0
-Power6=1
+Power6=0
 Power7=0
-Power8=1
-Power9=1
+Power8=0
+Power9=0
 Power10=0
 Power11=0
 Power12=0
@@ -30,7 +30,7 @@ Flag7=0
 Flag8=0
 Flag9=0
 [World]
-World Folder=[ Paul Henrik ] - Clean Build
+World Folder=Paul - Scenes
 [Extras]
 Character=juni
 Creatures 1=0
