--- a/Worlds/[ Paul Henrik ] - Clean Build/World.ini
+++ b/Worlds/[ Paul Henrik ] - Clean Build/World.ini
@@ -2,12 +2,12 @@
 Name=Clean Build
 Author=[ Paul Henrik ]
 Description=wow
-Category A=
+Category A=Environmental
 Category B=
-Difficulty A=Lunatic
+Difficulty A=Easy
 Difficulty B=
 Difficulty C=
-Size=
+Size=Small
 Format=4
 HoloFix=True
 New=0
